--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,19 @@
+@import "tailwindcss";
+
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
 }
 
 *
 {
-  margin: 0;
-  padding: 0;
+  /* margin: 0; */
+  /* padding: 0; */
   box-sizing: border-box;
+}
+
+#howToPlayContainer
+{
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  letter-spacing: 0.5px;
 }
